--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,87 @@
   height: 100vh;
   background-color: darkblue;
 }
+
+.controls {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 100%;
+  min-width: 200px;
+  max-width: 200px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  
+  background-color: rgba(0,0,0,0.1);
+  padding: 2rem;
+  padding-top: 4rem;
+  border-radius: 20px;
+
+  transition: 250ms;
+}
+.controls.closed {
+  background-color: transparent;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  
+  animation: close 350ms linear forwards;
+}
+
+.controls.closed label {
+  margin-top: 300px;
+}
+
+.controls input {
+  margin-bottom: 1rem;
+}
+
+.toggleButton {
+  margin: 2px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  border-radius: 20px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color: rgba(0,0,0,0.75);
+  
+  transition: 350ms;
+}
+
+.controls.closed .toggleButton {
+  justify-content: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  width: 20px;
+}
+
+.controls.closed .toggleButton::after {
+  content: "+";
+}
+.controls .toggleButton::after {
+  content: "x";
+}
+
+@keyframes close {
+  0% {
+    width: 100%;
+    height: 100px;
+  }
+  75% {
+    width: 100%;
+    min-width: 0px;
+    height: 0px;
+  }
+  100% {
+    min-width: 0px;
+    height: 0px;
+    width: 0%;
+  }
+}
