--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-.App {
+.App, 
+.loading-screen {
   width: 100vw;
   height: 100vh;
-  background-color: darkblue;
+  background-color: #D9AFD9;
+  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .controls {
@@ -71,6 +76,19 @@
   content: "x";
 }
 
+.spinner {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  overflow: hidden;
+  border-radius: 100%;
+  position: relative;
+  border: 8px solid rgba(255,255,255,0.5);
+  border-top-color: white;
+  
+  animation: 1s infinite spin forwards ease-in-out;
+}
+
 @keyframes close {
   0% {
     width: 100%;
@@ -85,5 +103,14 @@
     min-width: 0px;
     height: 0px;
     width: 0%;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
   }
 }
